# unsat

./: .gitignore  404.html  CONTRIBUTING.md  README.md  data.py  example.ipynb  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml  python.yaml
2dvs3d/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
api/api/: api.md  index.html
api/train/: index.html  train.md
config/: index.html
configs/: full_run.yaml  profiler.yaml  test_config.yaml  test_profiling.yaml  unet.yaml  unet_binary.yaml
data/: index.html
docs/: .2dvs3d.md.swp  2dvs3d.md  config.md  data.md
docs/notebooks/: visualization.ipynb
faults/: faults.h5  faults.yaml  faults_to_h5.py
installation/: index.html  installation.md
notebooks/visualization/: index.html
scripts/: run.slurm  test_run.slurm
search/: search_index.json
site/: objects.inv  sitemap.xml
tests/: test_Sampler.py  test_data.py  test_io.py  test_plot.py  test_train.py
unsat/: AE.py  Sampler.py  callbacks.py  data.py  io.py  main.py  models.py  plot.py  train.py
unsatIO/: Extraction-random-subvolumes.py  Sampler.py  io.py  models.py  plot.py  train.py
usage/: index.html  usage.md
