[tool.poetry]
name = "unsatIO"
version = "0.1.0"
description = ""
authors = ["Pablo Rodríguez Sánchez <pablo.rodriguez.sanchez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
pillow = "^10.1.0"
matplotlib = "^3.8.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
