[tool.poetry]
name = "unsat"
version = "0.1.0"
description = ""
authors = ["Pablo Rodríguez Sánchez <pablo.rodriguez.sanchez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
pillow = "^10.1.0"
matplotlib = "^3.8.1"
torch = "^2.1.1"
h5py = "^3.10.0"
black = "^23.11.0"
isort = "^5.13.0"
pre-commit = "^3.6.0"
torchmetrics = "^1.2.1"
lightning = "^2.1.2"
wandb = "^0.16.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = 1
skip_magic_trailing_comma = true

[tool.isort]
atomic = true
line_length = 100
profile = "black" # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#custom-configuration
skip_gitignore = true
known_first_party = ["validphys", "eko", "n3fit", "reportengine"]
force_sort_within_sections = true

